# uiautomator2-mcp-server

./: .editorconfig  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml  test.yml
.skills/u2mcp-uitest/: skill.md  test.spec.md
src/u2mcp/: __init__.py  __main__.py  background.py  health.py  helpers.py  mcp.py  middlewares.py
src/u2mcp/tools/: __init__.py  action.py  app.py  clipboard.py  device.py  element.py  input.py  misc.py  scrcpy.py
src/uiautomator2_mcp_server/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: test_action.py  test_app.py  test_clipboard.py  test_device.py  test_element.py
