[project]
name = "uiautomator2-mcp-server"
dynamic = ["version"]
description = "uiautomator2 mcp server"
readme = "README.md"
authors = [{ name = "tanbro" }]
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.10,<3.0", "uiautomator2>=3.5,<4.0"]
license = { text = "GPL-3.0-or-later" }

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/u2mcp/_version.py"

[project.scripts]
uiautomator2-mcp-server = "u2mcp.__main__:main"
u2mcp = "u2mcp.__main__:main"

[project.urls]
homepage = "https://github.com/tanbro/uiautomator2-mcp-server"
documentation = "https://github.com/tanbro/uiautomator2-mcp-server/blob/main/README.md"
repository = "https://github.com/tanbro/uiautomator2-mcp-server.git"
issues = "https://github.com/tanbro/uiautomator2-mcp-server/issues"
changelog = "https://github.com/tanbro/uiautomator2-mcp-server/blob/main/CHANGELOG.md"

[dependency-groups]
dev = ["mypy"]
