[project]
name = "uiautomator2-mcp-server"
dynamic = ["version"]
description = "uiautomator2 mcp server"
readme = "README.md"
authors = [{ name = "tanbro", email = "tanbro@163.com" }]
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.11.0,<3.0", "uiautomator2>=3.5,<4.0"]
license = "GPL-3.0-or-later"
keywords = ["uiautomator2", "mcp", "fastmcp", "adb", "android", "adbutils"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/u2mcp/_version.py"

[project.scripts]
uiautomator2-mcp-server = "u2mcp.__main__:main"
u2mcp = "u2mcp.__main__:main"

[project.urls]
homepage = "https://github.com/tanbro/uiautomator2-mcp-server"
documentation = "https://github.com/tanbro/uiautomator2-mcp-server/blob/main/README.md"
repository = "https://github.com/tanbro/uiautomator2-mcp-server.git"
issues = "https://github.com/tanbro/uiautomator2-mcp-server/issues"
changelog = "https://github.com/tanbro/uiautomator2-mcp-server/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  { include-group = "type" },
  { include-group = "test" },
]
type = ["mypy"]
test = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-mock"]
